--- a/src/pages/auth/signin/signin.module.css
+++ b/src/pages/auth/signin/signin.module.css
@@ -1,3 +1,41 @@
+@media (max-width: 680px) {
+    html #form{
+        width: 400px;
+    }
+    html #email{
+        width: 310px;
+    }
+    html #password{
+        width: 310px;
+    }
+
+    html #submit{
+        width: 180px;
+    }
+    html #check{
+        width: 310px;
+    }
+}
+
+@media (max-width: 430px) {
+    html #form{
+        width: 330px;
+    }
+    html #email{
+        width: 240px;
+    }
+    html #password{
+        width: 240px;
+    }
+
+    html #submit{
+        width: 110px;
+    }
+    html #check{
+        width: 240px;
+    }
+}
+
 #signin{
     width: 100%;
     height: 100vh;
@@ -40,7 +78,7 @@
 
 #password input{
     height: 30px;
-    width: 450px;
+    width: 100%;
     font-size: 15px;
     padding-left: 5px;
 }
