--- a/src/pages/auth/signin/signin.module.css
+++ b/src/pages/auth/signin/signin.module.css
@@ -38,15 +38,16 @@
 
 #signin{
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 50px);
     display: flex;
-    align-items: center;
     justify-content: center;
+    margin-top: 50px;
 }
 
 #form{
-    width: 600px;
-    height: 400px;
+    width: 390px;
+    position: relative;
+    height: 290px;
     background-color: rgb(239, 239, 239);
     display: flex;
     flex-direction: column;
@@ -56,13 +57,13 @@
 }
 
 #form p{
-    margin-top: 30px;
-    font-size: 26px;
+    margin-top: 20px;
+    font-size: 23px;
 }
 
 #email{
-    margin-top: 60px;
-    width: 450px;
+    margin-top: 30px;
+    width: 280px;
 }
 #email input{
     width: 100%;
@@ -72,8 +73,8 @@
 }
 
 #password{
-    margin-top: 50px;
-    width: 450px;
+    margin-top: 20px;
+    width: 280px;
 }
 
 #password input{
@@ -92,7 +93,7 @@
 }
 
 #check{
-    width: 450px;
+    width: 280px;
     margin-top: 5px;
     display: flex;
     align-items: center;
@@ -112,9 +113,9 @@
 }
 
 #submit{
-    width: 250px;
+    width: 180px;
     height: 30px;
-    margin-top: 45px;
+    margin-top: 30px;
     font-size: 15px;
 }
 #submit:hover{
