--- a/src/pages/auth/signup/signup.module.css
+++ b/src/pages/auth/signup/signup.module.css
@@ -42,15 +42,16 @@
 
 #signup{
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 50px);
     display: flex;
-    align-items: center;
     justify-content: center;
+    margin-top: 50px;
 }
 
 #form{
-    width: 600px;
-    height: 500px;
+    position: relative;
+    width: 390px;
+    height: 340px;
     background-color: rgb(239, 239, 239);
     display: flex;
     flex-direction: column;
@@ -60,13 +61,13 @@
 }
 
 #form p{
-    margin-top: 30px;
-    font-size: 26px;
+    margin-top: 20px;
+    font-size: 23px;
 }
 
 #name{
-    margin-top: 60px;
-    width: 450px;
+    margin-top: 30px;
+    width: 280px;
 }
 #name input{
     width: 100%;
@@ -76,8 +77,8 @@
 }
 
 #email{
-    margin-top: 50px;
-    width: 450px;
+    margin-top: 20px;
+    width: 280px;
 }
 #email input{
     width: 100%;
@@ -87,8 +88,8 @@
 }
 
 #password{
-    margin-top: 50px;
-    width: 450px;
+    margin-top: 20px;
+    width: 280px;
 }
 
 #password input{
@@ -111,7 +112,7 @@
 }
 
 #check{
-    width: 450px;
+    width: 280px;
     margin-top: 5px;
     display: flex;
     align-items: center;
@@ -131,9 +132,9 @@
 }
 
 #submit{
-    width: 250px;
+    width: 180px;
     height: 30px;
-    margin-top: 45px;
+    margin-top: 30px;
     font-size: 15px;
 }
 #submit:hover{
