--- a/src/pages/upload/upload.module.css
+++ b/src/pages/upload/upload.module.css
@@ -33,12 +33,13 @@
     height: 100vh;
     display: flex;
     justify-content: center;
-    align-items: center;
+    margin-top: 50px;
 }
 
 #form{
-    width: 600px;
-    height: 400px;
+    width: 390px;
+    position: relative;
+    height: 280px;
     background-color: rgb(239, 239, 239);
     display: flex;
     flex-direction: column;
@@ -48,13 +49,13 @@
 }
 
 #form p{
-    margin-top: 30px;
-    font-size: 26px;
+    margin-top: 20px;
+    font-size: 23px;
 }
 
 #title{
-    margin-top: 60px;
-    width: 450px;
+    margin-top: 30px;
+    width: 290px;
 }
 #title input{
     width: 100%;
@@ -64,8 +65,8 @@
 }
 
 #file{
-    margin-top: 60px;
-    width: 450px;
+    margin-top: 30px;
+    width: 290px;
 }
 #file input{
     width: 100%;
@@ -79,9 +80,9 @@
 }
 
 #submit{
-    width: 250px;
+    width: 190px;
     height: 30px;
-    margin-top: 45px;
+    margin-top: 30px;
     font-size: 15px;
 }
 #submit:hover{
