--- a/src/pages/watch/watch.module.css
+++ b/src/pages/watch/watch.module.css
@@ -1,130 +1,38 @@
-@media (max-width: 1000px) {
-    html #localVideo{
-        width: calc(100% - 20px);
-        margin-right: 10px;
-    }
-}
-@media (max-width: 760px) {
-    html #owner > div:first-child{
-        width: 65%;
-    }
-    html #owner > div:last-child{
-        width: 35%;
-    }
-}
-@media (max-width: 530px) {
-    html #owner{
-        flex-direction: column;
-        align-items: flex-start;
-    }
-    html #owner > div:first-child{
-        width: calc(100% - 20px);
-        margin-right: 10px;
-    }
-    html #owner > div:last-child{
-        width: calc(100% - 20px);
-        margin-right: 10px;
-        margin-top: 10px;
-    }
-    html #localVideo{
-        width: 100%;
-        margin: 0px;
-    }
-}
-
 #localVideo{
-    display: flex;
-    flex-direction: column;
-    margin-top: 10px;
-    margin-left: 10px;
     width: 75%;
+    height: 660px;
 }
 
-#video{
-    width: 100%;
-    height: 500px;
-    background-color: rgb(190, 190, 190);
-}
-#video video{
-    width: 100%;
-    height: 100%;
+#comments{
+    width: 75%;
+    border-top: 1px solid rgb(201, 201, 201);
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 10px;
 }
 
-#title{
-    width: 100%;
-    margin-left: 5px;
-    margin-top: 5px;
-    font-size: 30px;
-}
-
-#title:hover{
-    cursor: default;
-}
-
-#videoInfo{
+#sendComment{
     width: 100%;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    margin-top: 5px;
-    margin-left: 5px;
-    font-size: 13px;
 }
 
-#videoInfo:hover{
-    cursor: default;
+#sendComment input{
+    margin: 5px 0px 0px 5px;
+    width: 80%;
+    padding: 5px;
+}
+#sendComment input:focus{
+    outline: none;
 }
 
-#owner{
-    width: 100%;
-    display: flex;
-    margin-top: 10px;
-    margin-left: 5px;
-    align-items: center;
+#sendComment button{
+    margin: 5px 5px 0px 0px;
+    width: 65px;
 }
-#owner:hover{
-    cursor: default;
+#sendComment button:hover{
+   cursor: pointer;
 }
-#owner > div:first-child{
-    width: 75%;
-    display: flex;
-    align-items: center;
-}
-#owner > div:last-child{
-    width: 25%;
-    display: flex;
-    align-items: center;
-}
-#ownerImage{
-    width: 50px;
-    height: 50px;
-    border-radius: 100%;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(190, 190, 190);
-    margin-right: 10px;
-}
-#ownerImage:hover{
-    cursor: pointer;
-}
-#ownerImage img{
-    width: 100%;
-    height: 100%;
-    border-radius: 100%;
-}
-#ownerName{
-    font-size: 19px;
-}
-#likes{
-    padding: 10px;
-}
-#deslikes{
-    margin-left: 30px;
-    padding: 10px;
-}
-#likes:hover{
-    cursor: pointer;
-}
-#deslikes:hover{
-    cursor: pointer;
-}
+#sendComment button:active{
+    transform: translateY(1px);
+ }
