--- a/src/components/video/historicVideo/historicVideo.module.css
+++ b/src/components/video/historicVideo/historicVideo.module.css
@@ -1,10 +1,27 @@
+@media (max-width: 1150px) {
+    html .localVideo{
+        width: 300px;
+    }
+}
+@media (max-width: 1017px) {
+    html .localVideo{
+        width: 350px;
+    }
+}
+
+@media (max-width: 805px) {
+    html .localVideo{
+        width: 100%;
+    }
+}
+
 .localVideo{
     width: 100%;
     display: flex;
     flex-direction: column;
 }
 .video{
-    width: 250px;
+    width: 100%;
     height: 150px;
     background-color: rgb(190, 190, 190);
 }
