--- a/src/components/video/watchVideo/watchVideo.module.css
+++ b/src/components/video/watchVideo/watchVideo.module.css
@@ -2,6 +2,12 @@
     html #localVideo{
         width: calc(100% - 20px);
         margin-right: 10px;
+        justify-content: flex-end;
+    margin-right: 40px;
+    }
+    html #owner > div:last-child{
+        justify-content: flex-end;
+        margin-right: 40px;
     }
 }
 @media (max-width: 760px) {
@@ -13,22 +19,18 @@
     }
 }
 @media (max-width: 530px) {
-    html #owner{
-        flex-direction: column;
-        align-items: flex-start;
-    }
-    html #owner > div:first-child{
-        width: calc(100% - 20px);
-        margin-right: 10px;
-    }
-    html #owner > div:last-child{
-        width: calc(100% - 20px);
-        margin-right: 10px;
-        margin-top: 10px;
-    }
     html #localVideo{
         width: 100%;
         margin: 0px;
+    }
+    html #title{
+        margin-left: 15px;
+    }
+    html #videoInfo{
+        margin-left: 15px;
+    }
+    html #owner{
+        margin-left: 15px;
     }
 }
 
@@ -117,10 +119,18 @@
 }
 #likes{
     padding: 10px;
+    display: flex;
+}
+#likes > p{
+    margin-left: 5px;
 }
 #deslikes{
     margin-left: 30px;
     padding: 10px;
+    display: flex;
+}
+#deslikes > p{
+    margin-left: 5px;
 }
 #likes:hover{
     cursor: pointer;
