--- a/src/pages/historic/historic.module.css
+++ b/src/pages/historic/historic.module.css
@@ -1,3 +1,20 @@
+@media (max-width: 1150px) {
+    html #videos{
+        grid-template-columns: repeat(3, 300px);
+    }
+}
+@media (max-width: 1017px) {
+    html #videos{
+        grid-template-columns: repeat(2, 350px);
+    }
+}
+
+@media (max-width: 805px) {
+    html #videos{
+        grid-template-columns: repeat(1, 100%);
+    }
+}
+
 #div{
     display: flex;
     flex-direction: column;
