--- a/src/pages/profile/profile.module.css
+++ b/src/pages/profile/profile.module.css
@@ -1,3 +1,20 @@
+@media (max-width: 1150px) {
+    html #videos{
+        grid-template-columns: repeat(3, 300px);
+    }
+}
+@media (max-width: 1017px) {
+    html #videos{
+        grid-template-columns: repeat(2, 350px);
+    }
+}
+
+@media (max-width: 805px) {
+    html #videos{
+        grid-template-columns: repeat(1, 100%);
+    }
+}
+
 @media (max-width: 850px) {
     html #profile{
         display: flex;
@@ -5,19 +22,35 @@
         justify-content: center;
         align-items: center;
     }
+    html #image{
+        margin-top: 30px;
+    }
     html #profileInfo{
         margin-left: 0px;
         margin-top: 0px;
     }
     html #edit{
         margin-right: 0px;
-        width: 80%;
+        width: 90%;
+        justify-content: space-between;
+    }
+    html #edit > form{
+        width: 45%;
+    }
+    html #edit > form:first-child{
+        margin-right: 0px;
     }
 }   
-@media (max-width: 460px) {
-    html #image{
-        width: 300px;
-        height: 300px;
+@media (max-width: 480px) {
+    html #edit{
+        flex-direction: column;
+        align-items: center;
+    }
+    html #edit > form{
+        width: 80%;
+    }
+    html #edit > form:last-child{
+        margin-top: 20px;
     }
 }   
 
@@ -125,4 +158,5 @@
     grid-template-columns: repeat(4, 250px);
     justify-content: space-between;
     grid-gap: 10px;
+    margin-bottom: 20px;
 }
