--- a/src/pages/watch/watch.module.css
+++ b/src/pages/watch/watch.module.css
@@ -1,3 +1,15 @@
+@media (max-width: 1000px) {
+    html #comments{
+        width: calc(100% - 20px);
+        margin-right: 10px;
+    }
+}
+@media (max-width: 530px) {
+    html #sendComment input{
+        width: 60%;
+    }
+}
+
 #localVideo{
     width: 75%;
     height: 660px;
